--- a/_0_Sequence_comparison.ipynb
+++ b/_0_Sequence_comparison.ipynb
@@ -887,7 +887,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -901,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
