--- a/_0_Sequence_comparison.ipynb
+++ b/_0_Sequence_comparison.ipynb
@@ -361,16 +361,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abcde\n",
-    "abcee\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -451,7 +441,7 @@
     "\n",
     "**Levenshtein distance**: the minimum number of three single-character edits (insertions, deletions, or substitutions) required to change one string into the other. \n",
     "\n",
-    "Can be expressed as Levenshtein similarity;\n",
+    "Can be expressed as **Levenshtein similarity** (0-1);\n",
     "\n",
     "Use cases:\n",
     "- Spell checking / autocorrect algorithms\n",
@@ -463,15 +453,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "0.75\n"
+      "\n",
+      "Levenshtein distance: 1\n",
+      "Levenshtein normalized similarity: 0.75\n",
+      "\n"
      ]
     }
    ],
@@ -481,8 +473,10 @@
     "# we can replace one letter by another to get the other word, so normalized similarity is (4-1)/4 = 75%\n",
     "a = 'book'\n",
     "b = 'look'\n",
-    "print( td.levenshtein(a, b) )\n",
-    "print( td.levenshtein.normalized_similarity(a, b) )\n"
+    "print(f\"\"\"\n",
+    "Levenshtein distance: {td.levenshtein(a, b)}\n",
+    "Levenshtein normalized similarity: {td.levenshtein.normalized_similarity(a, b)}\n",
+    "\"\"\")\n"
    ]
   },
   {
@@ -887,7 +881,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -901,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
