--- a/_0_Sequence_comparison.ipynb
+++ b/_0_Sequence_comparison.ipynb
@@ -557,6 +557,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install textdistance"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
