--- a/_0_Sequence_comparison.ipynb
+++ b/_0_Sequence_comparison.ipynb
@@ -123,6 +123,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.81649658]]\n",
+      "0.816496580927726 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics.pairwise import cosine_similarity \n",
+    "\n",
+    "x = np.array([[1, 1, 1]])\n",
+    "y = np.array([[1, 1, 0]])\n",
+    "print(cosine_similarity(x, y))\n",
+    "single_value = float(cosine_similarity(x, y)[0][0])\n",
+    "print(single_value, type(single_value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        ],\n",
+       "       [0.57735027, 0.81649658]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([[0, 0, 0], [1, 1, 1]])\n",
+    "y = np.array([[1, 0, 0], [1, 1, 0]])\n",
+    "cosine_similarity(x, y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -915,7 +963,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "data-science-ml-cpu",
    "language": "python",
    "name": "python3"
   },
@@ -929,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
