--- a/_0_Sequence_comparison.ipynb
+++ b/_0_Sequence_comparison.ipynb
@@ -963,7 +963,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-ml-cpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -977,7 +977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
