--- a/_0_Sequence_comparison.ipynb
+++ b/_0_Sequence_comparison.ipynb
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -912,6 +912,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2857142857142857"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 'avngers'\n",
+    "b = 'avengers 2: endgame'\n",
+    "c = 'whatever'\n",
+    "td.smith_waterman.normalized_similarity(a, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "avengers - avengers 2: endgame\n",
+      "8\n",
+      "8\n",
+      "\n",
+      "avengers - swingers\n",
+      "5\n",
+      "5\n",
+      "\n",
+      "avngers - avengers 2: endgame\n",
+      "7\n",
+      "7\n",
+      "\n",
+      "avngers - swingers\n",
+      "5\n",
+      "5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'avengers'\n",
+    "a2 = 'avngers'\n",
+    "b = 'avengers 2: endgame'\n",
+    "c = 'swingers'\n",
+    "\n",
+    "for i, j in [\n",
+    "    [a, b],\n",
+    "    [a, c],\n",
+    "    [a2, b],\n",
+    "    [a2, c]\n",
+    "]:\n",
+    "    print(f\"{i} - {j}\")\n",
+    "    print(td.damerau_levenshtein.similarity(i, j))\n",
+    "    print(td.lcsseq.similarity(i, j))\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -921,6 +990,86 @@
     "- Needleman-Wunsch\n",
     "- Smith-Waterman\n",
     "- BLAST\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.26315789473684215"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "td.lcsstr.normalized_similarity(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'a']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'a a'.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aver'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "td.lcsseq(a, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "td.needleman_wunsch.normalized_similarity(a, a)"
    ]
   },
   {
